--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.7",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.507.0",
     "matter-js": "^0.20.0",
     "motion": "^12.9.7",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
